package mx.uaemex.fi.repository;

import mx.uaemex.fi.model.Nomina;
import org.springframework.data.repository.CrudRepository;

public interface NominaRepository extends CrudRepository<Nomina, Integer> {

}
